--- a/files/nginx-roboshop.conf
+++ b/files/nginx-roboshop.conf
@@ -8,7 +8,7 @@ location /api/catalogue/ { proxy_pass http://catalogue-dev.manishag.online:8080/
 location /api/user/ { proxy_pass http://user-dev.manishag.online:8080/; }
 location /api/cart/ { proxy_pass http://cart-dev.manishag.online:8080/; }
 location /api/shipping/ { proxy_pass http://shipping-dev.manishag.online:8080/; }
-location /api/payment/ { proxy_pass http://payment-dev-dev.manishag.online:8080/; }
+location /api/payment/ { proxy_pass http://payment-dev.manishag.online:8080/; }
 
 location /health {
   stub_status on;
