--- a/files/user.service
+++ b/files/user.service
@@ -1,10 +1,10 @@
 [Unit]
-Description = user Service
-
+Description = User Service
 [Service]
 User=roboshop
 Environment=MONGO=true
-Environment=MONGO_URL="mongodb://mongodb-dev.manishag.online:27017/users"
+Environment=REDIS_HOST=redis-dev.manishag.online
+Environment=MONGO_URL="mongodb://mongod-dev.manishag.online:27017/users"
 ExecStart=/bin/node /app/server.js
 SyslogIdentifier=user
 
